# fast_turtle

./: .gitignore  CMakeLists.txt  README.md  package.xml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
include/: controller.h  fast_turtle.h  food_items.h  geometry.h  obstacles.h  robot.h  swarm_robotics.h  utils.h  utils.tcc  world.h
launch/: fast_turtle_arena00.launch  fast_turtle_arena01.launch  fast_turtle_arena_food_test.launch  fast_turtle_arena_obstacle.launch  fast_turtle_arena_offline.launch  fast_turtle_arena_one_obstacle.launch  fast_turtle_arena_one_obstacle_two.launch  fast_turtle_arena_sc_free.launch  fast_turtle_arena_sc_free_solo.launch  fast_turtle_arena_sc_single_obstacle.launch  fast_turtle_arena_sc_single_obstacle_solo.launch  fast_turtle_arena_simple.launch  fast_turtle_live.launch  fast_turtle_test_drones.launch
msg/: FoodData.msg  RobotData.msg  RobotDataArray.msg  SwarmAgentData.msg  SwarmLeaderData.msg
notebooks/: competition_task0.ipynb  competition_task1.ipynb  competition_task2.ipynb  dynamic_systems.py  main.ipynb  single_agent_fast_turtle.ipynb  single_agent_v2.0.ipynb
notebooks/.ipynb_checkpoints/: single_agent_fast_turtle-checkpoint.ipynb  single_agent_v2.0-checkpoint.ipynb
rviz/: scene.rviz  scene2.rviz  scene3.rviz
scripts/: CMakeLists.txt  FastTurtle_teleop_gotto_slider.ipynb  example.cpp  testing.cpp
src/: a.out  arena00.cpp  arena01.cpp  arena_food_test.cpp  arena_obstacle.cpp  arena_offline.cpp  arena_one_obstacle.cpp  arena_one_obstacle_two.cpp  arena_sc_free.cpp  arena_sc_single_obstacle.cpp  arena_simple.cpp  controller.cpp  controller_publisher.cpp  controller_training.cpp  fast_turtle.cpp  fast_turtle.h  geometry.cpp  geometry.h  goal.cpp  goal.h  live_simulation.cpp  my_controller.cpp  my_controller2.cpp  my_controller3.cpp  obstacles.cpp  robot.cpp  robot.h  swarm_robotics.cpp  test_drones.cpp  test_simulator.cpp  utils.cpp  utils.h  world.cpp  world.h
